# BulletinBoard

./: .gitignore  README.txt  db.sqlite3  manage.py  pyproject.toml  requirements.txt
Bboard/: asgi.py  settings.py  urls.py  wsgi.py
media/files/: Копия_CASSETTE_RUSSIA.xlsx
media/user_5/: LTN70APS03AA000.jfif
myboardapp/: admin.py  apps.py  filter.py  forms.py  models.py  signals.py  urls.py  views.py
myboardapp/fixtures/: initial_data.yaml
myboardapp/management/commands/: runapscheduler.py
myboardapp/migrations/: 0001_initial.py  0002_alter_bulletin_file.py  0002_alter_categorymodel_category_name.py  0002_remove_bulletin_file_uploader_bulletin_file.py  0003_alter_bulletin_file.py  0003_bulletin_title_alter_bulletin_file.py  0003_categorymodel_subscribers_and_more.py  0004_alter_bulletin_file.py  0004_rename_user_usualuser_alter_bulletin_author.py  0005_categorymodel_subscribers.py  0005_delete_usualuser.py  0006_alter_bulletin_file.py
myboardapp/static/myboardapp/: mail.css
myboardapp/templates/myboardapp/: base.html  bulletin_confirm_delete.html  bulletin_detail.html  bulletin_form.html  comment_confirm_delete.html  comment_form.html  comment_list.html  home.html  template.html  user_posts.html
templates/apscheduler/: week_posts.html
users/: forms.py  models.py  signals.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  logout.html  password_reset.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html
