[tool.poetry]
name = "repl_python3_BulletinBoard"
version = "0.1.0"
description = ""
authors = ["Exp <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
django-crispy-forms = "^1.14.0"
django-allauth = "^0.50.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
